# sdlpal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  SDL_stbimage.h  build_vs2022.bat  common.h  config.h  main.c  midi.c  to_utf8.ps1
adplug/: adplug.vcxproj  adplug.vcxproj.filters  convertopl.h  dosbox_opls.cpp  emuopls.cpp  emuopls.h  fprovide.cpp  mame_opls.cpp  mame_opls.h  nuked_opl.h  oplcore.h  opltypes.h  rix.cpp
adplug/adplug/: rix.cpp
adplug/dosbox/: dosbox_opls.h
adplug/mame/: mame_opls.cpp
adplug/src/: fprovide.cpp  fprovide.h  opl.h  rix.cpp
cmake/: SDL2.cmake  SDL2main.cmake  adplug.cmake  binio.cmake  libbinio.cmake  libmad.cmake  libogg.cmake  mad.cmake  native_midi.cmake  ogg.cmake  opus.cmake  opusfile.cmake  sdlpal.cmake  timidity.cmake  vorbis.cmake
docs/: README.md  sdlpal.cfg.example
emscripten/: Makefile  emscripten_adapter.cpp  sdlpal.html
libpal/: libpal.vcxproj  libpal.vcxproj.filters
native_midi/: native_midi_common.c  native_midi_common.h
sdlpal/: SDL_stbimage.h  ascii.h  audio.c  audio.h  battle.c  battle.h  codepage.h  common.h  defines.h  ending.c  ending.h  fight.c  fight.h  font.c  font.h  fontglyph_cn.h  fontglyph_jp.h  game.c  game.h  global.c  global.h  glslp.h  input.c  input.h  itemmenu.c  itemmenu.h  magicmenu.c  magicmenu.h  main.c  main.h  map.c  map.h  mini_glloader.c  mini_glloader.h  palcfg.c  palcfg.h  palcommon.c  palcommon.h  palette.c  palette.h  (+30 more)
sdlpal/include/: SDL_stbimage.h  audio.h  aviplay.h  common.h  fontglyph_tw.h  main.h  midi.h  music_mad.h  palcfg.h  palcommon.h  players.h  resampler.h  tsf.h  ui.h  video.h  video_glsl.h
sdlpal/source/: audio.c  aviplay.c  ending.c  font.c  glslp.c  input.c  main.c  midi.c  midi_timidity.c  midi_tsf.c  mini_glloader.c  mp3play.c  music_mad.c  oggplay.c  opusplay.c  overlay.c  palcfg.c  rixplay.cpp  rngplay.c  script.c  sound.c  uibattle.c  uigame.c  util.c  video.c  video_glsl.c
timidity/: common.c  common.h  instrum.c  mix.c  output.c  playmidi.c  readmidi.c  resample.c  tables.c  timidity.c
unix/: Makefile  native_midi.cpp  pal_config.h  unix.cpp
win32/: CMakeLists.txt  Makefile  Makefile.mingw  SDL.vcxproj  SDLmain.vcxproj  adplug.vcxproj  libbinio.vcxproj  libmad.vcxproj  libogg.vcxproj  libvorbis_static.vcxproj  native_midi.cpp  native_midi.vcxproj  opus.vcxproj  opusfile.vcxproj  pal_config.h  resource.h  sdlpal.sln  sdlpal.vcxproj  sdlpal.vcxproj.filters  sdlpal_win32.vcxproj  timidity.vcxproj  win32.cpp
win32/libmad/: libmad.vcxproj  libmad.vcxproj.filters
